--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:create": "npm run typeorm -- migration:create -n",
-    "typeorm:migration:run": "npm run typeorm -- migration:run"
+    "typeorm:migration:run": "npm run typeorm -- migration:run",
+    "seeders:prod": "ts-node db/seeders"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
